--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@ p{
     margin-top: 72px;
     padding-inline: 25px;
     padding-block: 10px;
-    /* width: min-content; */
+    width: min-content;
     text-wrap: nowrap;
 }
 
@@ -222,6 +222,10 @@ p{
     animation: pulse 5s infinite;
 }
 
+.menu-item{
+    display: none;
+}
+
 @media (max-width: 1290px) {
 
     .menu-item-profile{
@@ -234,6 +238,132 @@ p{
 
     .menu-item-hobby{
         left: 15vw;
+    }
+
+}
+
+@media (max-width: 1100px) {
+
+    .menu-item-profile{
+        display: flex;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1000;
+        cursor: pointer;
+        left: auto;
+        width: 52px;
+        height: 52px;
+        animation: none;
+        transition: 4s;
+    }
+
+    .menu-item-skills{
+        display: flex;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1000;
+        cursor: pointer;
+        width: 52px;
+        height: 52px;
+        animation: none;
+        transition: 3s;
+    }
+
+    .menu-item-hobby{
+        display: flex;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1000;
+        cursor: pointer;
+        left: auto;
+        width: 52px;
+        height: 52px;
+        animation: none;
+        transition: 2s;
+    }
+
+    .menu-item-contact{
+        display: flex;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1000;
+        cursor: pointer;
+        width: 52px;
+        height: 52px;
+        animation: none;
+        transition: 1s;
+    }
+
+
+
+
+    .menu-item-profile.open{
+        display: flex;
+        position: fixed;
+        top: 80px;
+        right: 20px;
+        z-index: 1000;
+        cursor: pointer;
+        left: auto;
+        width: 52px;
+        height: 52px;
+        animation: none;
+        transition: 0.25s;
+    }
+
+    .menu-item-skills.open{
+        display: flex;
+        position: fixed;
+        top: 140px;
+        right: 20px;
+        z-index: 1000;
+        cursor: pointer;
+        width: 52px;
+        height: 52px;
+        animation: none;
+        transition: 0.5s;
+    }
+
+    .menu-item-hobby.open{
+        display: flex;
+        position: fixed;
+        top: 200px;
+        right: 20px;
+        z-index: 1000;
+        cursor: pointer;
+        left: auto;
+        width: 52px;
+        height: 52px;
+        animation: none;
+        transition: 0.75s;
+    }
+
+    .menu-item-contact.open{
+        display: flex;
+        position: fixed;
+        top: 260px;
+        right: 20px;
+        z-index: 1000;
+        cursor: pointer;
+        width: 52px;
+        height: 52px;
+        animation: none;
+        transition: 1s;
+    }
+
+    .menu-item{
+        display: flex;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1000;
+        cursor: pointer;
+        width: 52px;
+        height: 52px;
     }
 
 }
